Correctios of Eatable description and portfolio link icon in dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -620,7 +620,7 @@ body {
   width: 5rem;
   height: 5rem;
   background-color: var(--color-white);
-  color: var(--color-title);
+  color: #3f396d;
   border-radius: 50%;
   display: flex;
   justify-content: center;
